--- a/public/tuiter/styles.css
+++ b/public/tuiter/styles.css
@@ -279,8 +279,9 @@ input[type=search] {
 .wd-icon {
     padding: 10px;
     min-width: 40px;
-    margin-bottom: 35px;
+    margin-bottom: 1120px;
     color: darkgrey;
+    vertical-align: top;
 }
 
 .wd-input-field {
@@ -352,4 +353,17 @@ input[type=search] {
     display: inline;
     vertical-align: baseline;
 }
+
+.wd-title{
+    font-weight: bold;
+    font-size: x-large;
+}
+.wd-title i{
+    color: darkgrey;
+}
+.wd-title rt{
+    color:darkgrey;
+    text-align: right;
+}
+
 
