--- a/public/tuiter/styles.css
+++ b/public/tuiter/styles.css
@@ -309,7 +309,7 @@ input[type=search] {
     position: relative;
     text-align: center;
     color: white;
-    -webkit-text-stroke: 2px black;
+    -webkit-text-stroke: 1px black;
     font-weight: bolder;
     font-size: x-large;
 }
@@ -346,7 +346,7 @@ input[type=search] {
 .wd-tuit-dots {
     position: relative;
     text-align: right;
-    color: grey;
+    color: black;
     width: 100%;
 }
 .wd-inline-img {
@@ -380,28 +380,27 @@ input[type=search] {
     text-align: left;
 }
 
-.wd-tuit{
-    text-align: center;
-    margin-top:10%;
-    padding-right: 100%;
+.wd-tuit {
+    position: relative;
+    text-align: left;
+    margin-top: 10%;
+    margin-right: 10%;
     border: 1px solid lightgrey;
+    display: inline-block;
 }
 
-    .wd-tuit .icon {
-        margin-right: 10px;
+wd-user {
+    border: 1px solid black;
+    padding: 4px 2px;
+    margin-right: 20px;
+    display: inline-block;
+}
+
+    wd-user icon {
         display: inline-block;
-        width: 20px;
-        height: 20px;
-    }
-
-    .wd-tuit .user{
-        font-weight: bold;
-    }
-    .wd-tuit .user .handle{
-        color: lightgrey;
-    }
-    .wd-tuit .content{
+        vertical-align: middle;
 
     }
+
 
 
